# ChangeLog for app-cdr/cdrtools
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.349 2015/02/18 15:33:08 zerochaos Exp $

  18 Feb 2015; Rick Farina <zerochaos@gentoo.org> cdrtools-3.01_alpha17.ebuild,
  cdrtools-3.01_alpha24.ebuild, cdrtools-3.01_alpha27.ebuild:
  add missing RDEPEND on libcap per bug 540430

  14 Feb 2015; Daniel Pielmeier <billie@gentoo.org>
  -cdrtools-3.01_alpha25.ebuild:
  Remove old.

*cdrtools-3.01_alpha27 (30 Jan 2015)

  30 Jan 2015; Daniel Pielmeier <billie@gentoo.org>
  +cdrtools-3.01_alpha27.ebuild:
  Version bump.

*cdrtools-3.01_alpha25 (11 Oct 2014)

  11 Oct 2014; Daniel Pielmeier <billie@gentoo.org>
  +cdrtools-3.01_alpha25.ebuild:
  Version bump.

  21 Sep 2014; Patrick Lauer <patrick@gentoo.org> cdrtools-3.01_alpha17.ebuild,
  cdrtools-3.01_alpha24.ebuild:
  Whitespace

  21 Sep 2014; Robin H. Johnson <robbat2@gentoo.org>
  cdrtools-3.01_alpha17.ebuild, cdrtools-3.01_alpha24.ebuild:
  Bug #486680: do not create group-writable directories during build that would
  fail under grsec TPE.

  03 Aug 2014;  <tgall@gentoo.org> cdrtools-3.01_alpha24.ebuild:
  arm64, initial support

  10 Jun 2014; Daniel Pielmeier <billie@gentoo.org>
  -cdrtools-3.01_alpha23.ebuild:
  Remove old.

*cdrtools-3.01_alpha24 (04 Jun 2014)

  04 Jun 2014; Daniel Pielmeier <billie@gentoo.org>
  +cdrtools-3.01_alpha24.ebuild:
  Version bump.

  17 May 2014; Daniel Pielmeier <billie@gentoo.org>
  cdrtools-3.01_alpha17.ebuild, cdrtools-3.01_alpha23.ebuild:
  Updating homepage and mirror due to BerliOS finally closing its doors.

  13 Apr 2014; Naohiro Aota <naota@gentoo.org> cdrtools-3.01_alpha23.ebuild:
  Use 0 instead of root for group name. #507466

  05 Apr 2014; Raúl Porcel <armin76@gentoo.org> cdrtools-3.01_alpha23.ebuild:
  Add support for arm64

  24 Mar 2014; Daniel Pielmeier <billie@gentoo.org>
  -cdrtools-3.01_alpha22.ebuild:
  Remove old.
