@@ -4,25 +4,15 @@ Hash: SHA256
 DIST cdrtools-3.01a17.tar.bz2 2061522 SHA256 3d613965b213ad83e4be0ba2535e784901839ea4d11a20a2beb6765f0eb76dfa SHA512 34a0579c536028b030cf828441ad55a705472646bc3a1ae962aad234fbe0b12c2bcb670511487c17086f5ba7643d1b8ae42a4a86bfe2940dc94f9744377daa8b WHIRLPOOL b718d559e0b36a576a42a38f84b3917891450d0bbab47b084eb1e906a396cf28ce47b79fd16565d4e0697311ee0c3d5abdd95b52ba2d7ae4e9f32d9b26bc26e1
 DIST cdrtools-3.01a24.tar.bz2 2075400 SHA256 4d9907b84f5b65dc6ca278b6202b90b8eb68652b01aa4dda978ffede8bdd4a5b SHA512 19be30de77fca00bb06fa6325149421304c1d5ff7d40a9d842496058494fcf0e798678c661ff3ae9ebc9e4c5971917f7aabfd813a6d88ff863d7e2e5f1456766 WHIRLPOOL 4533288dffef2b702eeef2a44fd702aff3e66283d5d90c810eb177ee4f1f1aa7cfd75238bf1f2a406e9b8ccaa43c7a77fb401825f8ce806e73fdc80abcc0a45a
 DIST cdrtools-3.01a27.tar.bz2 2079545 SHA256 71188d5a9ad61de440b07471e2612b937b5f9b456eae10efbdb012b6a9dfe3ca SHA512 bec2efd8989899cec58d39129f4bd8f0c42af34d65c575af48feea89a63c7eaf5064a885922730364879b325a9e0d6d78c2e3e7dc4ee5b06523da33f55333f72 WHIRLPOOL 5f722e7861452f6a216d9a4df9b5bd5c61b75056ba8503d1a489b42ce075bf24e469849f943bce180c46ce7030fdd1ce940a71fe7f17b2d585b6940c6abe87d9
-EBUILD cdrtools-3.01_alpha17.ebuild 5242 SHA256 76bedfcd216a8a2616044e7dc475e18b4ad2d1c19e8a24effbb4cdd624a0d2dc SHA512 74c9d391060e689157c90028222109ba4e0030848f5c01a6aeff46f8dc936cba1c2d87fbaeb6b2dc89b75bafd700bf734d0ee3761931c12531589ffc0df6a643 WHIRLPOOL 170ba5e7888948cd61459d121932cefda59a17d05ea4dee9cbbf19e9abb9061ac371857bba7f8b59b90cafdd6bbe1d3ec9e34a6e997e80a0207d32d30909db32
-EBUILD cdrtools-3.01_alpha24.ebuild 8004 SHA256 bb5ea8eade6f50f5310eb8c114a1bdf5053ffe8fb6050a94f67acbe8c2aebe16 SHA512 a014639a13b9f15aec5435a4aa7c6cbfb0914487d11596d47b1947227ce2ff6ee51cd901142295346748edcfc95d7dccde4f02a77c49554b30e81b8182be21b1 WHIRLPOOL 3ae3545a34fe4cc096801215167ffcf64741bac9439525f605bacfa0271b9013a49e353a6f5a0e7986d261625cbf34b1efbc9f6bdf38f131defc4d77ab6c075e
-EBUILD cdrtools-3.01_alpha27.ebuild 8005 SHA256 843c7750d537072af47564c46d91bfd1675afb4d121c0ff42322255085b29a94 SHA512 46645a4a579d82b86bb5f0f3bffc3e74857efe72353982010107075d54f268a2173fac51a19557f68c1c872cf21712c907483cbfebd1b0d02202e5014ec6651e WHIRLPOOL 8b093936bfbf1f4e4c5ea0a0e353e2e82746c615b9d37e2ddf167c51f5af08920d8207fade4cc1a45276df3c08bc5e1457c8d187c13b3fb2a89bb458d720731f
-MISC ChangeLog 53421 SHA256 1bb3d2e4e273e73538728b5a99eb032fe0927f6e49b32524896b9efb410acc68 SHA512 9970d0cfb69337bd455b0312358b7874f1b7bd9e3c21ba38cf2bf2d3b0c75083b3c9f8ff8daa7c1ead189a7b9e8ba6a7d0d7b4bbbc958a9490ef9533cb78dd61 WHIRLPOOL 366bd2ae7532e42a89869e575166d1fe2cfbbe9593abf4cfe912c34031ba186f946bae6af998cdcc6ef36f73bbf1777b6817db9b0ecc7835f236f0cb31e64373
+EBUILD cdrtools-3.01_alpha17.ebuild 5237 SHA256 dd3795acba623f8e9c80c3c3acf287cc2c60aed3bee9325fb07d9e6edbfee47a SHA512 42b48b0e10ea809e5645f4f401a489fa591d1d083d4d8b0467b524fde723e37eca2ba9d2673c37f81bf247d63e0c0b795a0b9c6639c0f661613a5a52edc7edb5 WHIRLPOOL ba4ee8a0fc4f76d73aa09356bc2901e638a47bd339dc1c288e746a6966e0a24f6985616459b9b80f8043d632e86a43f4cd9d1fd97c8b9867ccb47d575b6b3a7a
+EBUILD cdrtools-3.01_alpha24.ebuild 7999 SHA256 6d2b1f9913ba8e2a0461d8967a9900fa16664ea17826377f1d88afc763ffb8ae SHA512 28fec619343eb7b56b3ba13f6f73d6b6a5780c592d39a41e21660877062db042c06d346e3867844c7e4189f496f844df173a34183c3c2fee97f0894dd4733707 WHIRLPOOL bf6bbe07351590c1f32fa94c456adbcb97045874eb50198287f8dbe3f8996e7adcaeafd92b06541daeff4250ca5ef7216a5ffa1855baffeaeaaf09b7f6b8bed7
+EBUILD cdrtools-3.01_alpha27.ebuild 7982 SHA256 14cb5b100783bc357402177780b039db68fa7c70d2faf7810ab9ea153e946fb8 SHA512 8647a554c6e2da859aab1572d416099966c6d0369174fb70ba9233bd7340c7305aec3756862cf0c8740a58c3f7ea3e57680f056b42ab46a3f927b4d9417c5554 WHIRLPOOL 46e6f58cef5a307114bb7e21b7dd2077990d9cc5c948e3d09368846c12a718bae7e5b19c71be23ddf80c2cb8aa6829f25b86922864b5a4afc47ad9e6d48a14a7
+MISC ChangeLog 53681 SHA256 2ee45e469f78c1f35204a74428e436d84421f050987509971f7140b87a2b2213 SHA512 8b042704445814ff4916bac3dd63402b89d914256f728a8da3e2881ae2e29f7572ba0698cadef5abf1d32fecd3be8909b113ee31c18a9fe94a9aa4da45bdf467 WHIRLPOOL 0448c19bb76c196f1249b0ce4b868bdc0fd3f37279bc7b7d0c4c0725f2a7af8a64fee3c98bdbb451f41bdbf9ac3d9f69c7d5cac1ccf9ef60deffd6ed4201e152
 MISC metadata.xml 507 SHA256 f1086372c5bae26f9438544c1102cbadc619718b163392cbe35f3b359560ef3b SHA512 77aef4353064a013d1944ee796b1a6cb9a8a60c698d53df46cac7be17c556d9a495c71b9578a536c61c429a0c87e894e962bdca9167bbc60522ef25aeab756a6 WHIRLPOOL 0771499480bc135391ab921f22aba47f9966b68c79083f29f9df8c185919b65422f69953cc876d7dca8a2af5539b85e0c592f4521f5b4034ca5cb6035dc7c28b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU5LC7AAoJEKXdFCfdEflKzywP/igMPQj0YHfKcVGnp4+ioEp8
-RWZ4TghGWtsdZG7kI8zRU97TATwdAvQTduGmIhO6Z3TGQ6SnQwcB+cMPjXDNRDKf
-IE0R0H1Lyc2vpBPxObV+poWr+1FxkywLB/2U66Lr9QAx1nEWRAKlVnyf5ogwudxg
-hsp5VW3v9f47+KYce1QeuvV0Iv/lH0vU1lDeDXyCB7Rov8N3Grcwrz6pdmby/hnU
-lrfh/UEPRePty1CQ5PPb5A6HVB/3fZKNmmmOOyWODJv12sYFyPC+NiN8e/fcwAJr
-p5+ee3GDFpaovGQS9SHAuvoEkPsT1xXaMVeQUIYvYO7OxtR7JjO0GPecyU4kx53p
-1tihrU1jBd/XNubGr3qfq7/GSNBwdw8+cvOitgxn39h95RL/zzqy/zi4NfojYJIb
-UOmMB/et9hStnIadloRSRrqQwsg8crBzjUQe3Q9q+AXCKcziwiyznKkQ+KUCdNZs
-ILTAFHH7gvQGhzfAm3EI1tBDMFlHvc2ZzEyWrJAZzmp/WBxYJXghqJHyJbEI87iJ
-zNEpzORc9ona+81UDpax4bh3/b9cWwjj6IQZK+Zxcbc1AiEkqw9sdt1g78q3wNUQ
-VcdGeLnoJDXvreci10P0zIi+OvL0/enLW5S7bMSOAp7fkw2IEn95svKDEuTlWNky
-5QchFxBcOMa3p+IrDl4j
-=a9XB
+iF4EAREIAAYFAlTlU80ACgkQC77qH+pIQ6T8BgD7BJWU4S4xK2pxBN/iw8xiRc0L
+EUs9tG7PXtfh0c0wPaIA/0g6GqKcxisGqx5uTfjEebcg4bBMMe5VqaoKJ1tPMtWb
+=1LTg
 -----END PGP SIGNATURE-----
