@@ -1,5 +1,9 @@
 DIST crossfire-1.70.0.maps.tar.gz 28911538 SHA256 64b1bccef796fde9559a84b4486cf380710b9db70c2c45a1b0f67adf3d822aa9 SHA512 6c6349033950fc0bc60938d9784e420a4f594fdb6c3e0f281591445ae6c9e073caf1c5bb6627f0fe7f4b7a7a8afeafa1b41e948dbdfd9fe8fef1f41857afa06a WHIRLPOOL b5d1869b84f314dc054eadb22a5cfa83bb1721fcc1417b83e36586f2e3f65a90f2593eaecbb0e808d200aed563a5060961a1312d0afb0d9885b2a304263a8c48
 DIST crossfire-1.70.0.tar.gz 6626864 SHA256 f6679aa19f7b041a779d26215a7f0062ab7a1fd96185527c207485e084b4654d SHA512 c19f52aaf2292cacb47f186603d6a48769e84aea2973d5fa9028594001706a3e13452e540f2352e279c2f49a839282efb2624a0fd177b1729a2a6df0a5db4fc5 WHIRLPOOL 39652a4dc9c2d1096721c1462378a5b9481194ab1e0188a4bcbe9b8ebbd4981d5dea176cf243a8d23ed133df97dfaebf4831e5a5a5a446d75aa8ebf37daa47d8
+DIST crossfire-1.71.0.arch.tar.bz2 3462161 SHA256 016ee33b15879a96e14932a9209d03ee9e3da69b3f3bd6b82c800f43345f064d SHA512 f9707dc5dab24d0ba74654c6433e016a58ab4e99da5dade6614491eca00736965bb7fd9a24db4188c3409a0479a88bb0ea55282e519ffcbabf23d82e6a5b975e WHIRLPOOL 3c2776bda5f14804eee234731e2cd14fc98d77d06fea24c4be5838c4df236b642dbada63e629e1268fb987fe6b00c98d5960fb5dc7c9e608e996103ffa16a441
+DIST crossfire-1.71.0.maps.tar.bz2 19463076 SHA256 f6df5fd605dd3b83dce1aa730390443b09569e6fae93bef058cd8f52fedc17da SHA512 c3940b0a48f1badc14eb81610cfcd4241d140b666b5cb123845dca6ad742a18977ad7ada1d75d738f15f44374896c4dd6047989122257d7cd87362a3af0f97e8 WHIRLPOOL 5ea6a027b8d0a04e89f77eae74308655d82936fa8f492a75238ee5b665b4cc5a49598db3f3119808ca9403bb62d32b4da8d1cfd981a8e7f43001571d178bd516
+DIST crossfire-1.71.0.tar.bz2 6712638 SHA256 cc1917db207628c34d2222f1b6c416481f72f185ac3bc9e49b9a53db94fe1e1d SHA512 d867f3393cb18ed78158c9a724d386dd642f0193ace86fef592e7bdc80885b7f7ce3c37be34b77d73b31c939d41e533029f2e7dea405c00d7a67aa3baebd146d WHIRLPOOL 484d57f2d7f0138b35e3eb4c2fc08a2e462de6ddccde3b413bd141161bc1239283a966a2a3ebeeabef56b311e90d9cd86cba4a322e6152d930fa7d9a5ceb4267
 EBUILD crossfire-server-1.70.0.ebuild 1035 SHA256 caee3d244c38cc500cb7e155113da26a8a9be17cf155b1f0b2fe020dd76c0ff8 SHA512 ae6991af27a42dd7334cbb35e2f4de4e9561a0150a836d27b3bc268388f5b216d0ac5430bff259402a06863e5f4496ea97f00688141b61a9cd8b99c695a2094f WHIRLPOOL 2de7085cfdc9ea48519e544ee1ab76d39a5001ebbe4344c8abeb75ee70278ca837a433a9ef1d50af33b04ad8934ee0acbc5afe365585dcef5ed4440435c1afd0
-MISC ChangeLog 4602 SHA256 ab901aa8e6b81b5be1db4b87335997bd42dab7434bc8c7ce89b848403ca038b1 SHA512 e1abdfe5c61059c4ac26def00dd1b81e8bb3305f7b05ddda90ac1e288e8f0e58dbe60d20447d07a8880b7fdf2f5cac47698ac5dc4c6c42d4a9c8f33737bb10f1 WHIRLPOOL 363c18dedf7f6348ce1b1b4dc249084fa1ac9b8271afd79be73dd031d0054d081bc79212b40f4c21da101b5f444f83c30b0ca2271f5af9a485388d08250e9d12
+EBUILD crossfire-server-1.71.0.ebuild 1162 SHA256 2446e9f9c92f7e72f70ecf098498a069be774f421caf9ad929d8620a65cb842e SHA512 db8ee1a3a4d684b9ecd2a21b1f377f7e9c1e8b7d66c8401bf770f7f0b7da60cffdcd39b8edfe0896425009f874b99973daac4ce9372773fbd9bbbf0d34af0b3b WHIRLPOOL a826ff4a8bf7b3000a26c3f69b371a1a4a256126982e166b575b80f1eb345992d3eceeab230cc08fdb1ee8d9bdb958c1aa11431fa59574a45c8331fd660a3a3c
+MISC ChangeLog 4748 SHA256 958671f1f074efaa113f560bb93edaeca92f1bb0082e5362544566c20e216a2f SHA512 098953289b2b76a617f54da38f4e1005903e4c1bb9df6e6d342054b23443592a978fb702693804eccfdba005e3f484fd6795a84401307212bb0e05324b354a0c WHIRLPOOL 30dbc53a3bd95c16e23c76229bb20a4ec511937bacfce7483920ed0b36a5f7eaed2e3596b358922a70d66a9563260c2a31f2c0735595f912cc713aad6ae44444
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
