@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install postinst prepare
-DEPEND=acl? ( virtual/acl ) filecaps? ( sys-libs/libcap ) nls? ( virtual/libintl ) !app-cdr/cdrkit x11-misc/makedepend nls? ( >=sys-devel/gettext-0.18.1.1 ) filecaps? ( sys-libs/libcap ) sys-devel/gnuconfig
+DEPEND=acl? ( virtual/acl ) caps? ( sys-libs/libcap ) nls? ( virtual/libintl ) !app-cdr/cdrkit x11-misc/makedepend nls? ( >=sys-devel/gettext-0.18.1.1 ) filecaps? ( sys-libs/libcap ) sys-devel/gnuconfig
 DESCRIPTION=A set of tools for CD/DVD reading and recording, including cdrecord
 EAPI=5
 HOMEPAGE=http://sourceforge.net/projects/cdrtools/
-IUSE=acl nls unicode +filecaps
+IUSE=acl caps nls unicode +filecaps
 KEYWORDS=~alpha ~amd64 ~arm arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris
 LICENSE=GPL-2 LGPL-2.1 CDDL-Schily
-RDEPEND=acl? ( virtual/acl ) filecaps? ( sys-libs/libcap ) nls? ( virtual/libintl ) !app-cdr/cdrkit
+RDEPEND=acl? ( virtual/acl ) caps? ( sys-libs/libcap ) nls? ( virtual/libintl ) !app-cdr/cdrkit
 SLOT=0
 SRC_URI=mirror://sourceforge/cdrtools/alpha/cdrtools-3.01a24.tar.bz2
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	fcaps	eeefea88d5fef2853d4c1e3770340302	flag-o-matic	c263990f1b677b0f0be0a3299f179762	gnuconfig	00a0530e40148c254cebb925df0e87ef	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=650a64cfb2a6c260727bc3edba234436
+_md5_=9e514df4ff19feef2740651acf5698bc
