@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
+DEPEND=net-misc/curl X? ( x11-libs/libXaw media-libs/libpng:0 )
+DESCRIPTION=server for the crossfire clients
+EAPI=5
+HOMEPAGE=http://crossfire.real-time.com/
+IUSE=X
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=GPL-2
+RDEPEND=net-misc/curl X? ( x11-libs/libXaw media-libs/libpng:0 ) games-misc/games-envd
+RESTRICT=test
+SLOT=0
+SRC_URI=mirror://sourceforge/crossfire/crossfire-server/1.71.0/crossfire-1.71.0.tar.bz2 mirror://sourceforge/crossfire/crossfire-server/1.71.0/crossfire-1.71.0.maps.tar.bz2 mirror://sourceforge/crossfire/crossfire-server/1.71.0/crossfire-1.71.0.arch.tar.bz2
+_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	games	bc8839608d26ccd57ca4f2f01c67460f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=1fd310b94b8c692db02acaa507ed4a2d
