@@ -1,6 +1,12 @@
 # ChangeLog for games-server/crossfire-server
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-server/crossfire-server/ChangeLog,v 1.31 2014/08/28 07:49:33 mr_bones_ Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-server/crossfire-server/ChangeLog,v 1.32 2015/02/19 03:17:38 mr_bones_ Exp $
+
+*crossfire-server-1.71.0 (19 Feb 2015)
+
+  19 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org>
+  +crossfire-server-1.71.0.ebuild:
+  version bump
 
   28 Aug 2014; Michael Sterrett <mr_bones_@gentoo.org>
   -crossfire-server-1.60.0.ebuild, -files/crossfire-server-1.60.0-curl.patch:
