@@ -1,6 +1,11 @@
 # ChangeLog for app-cdr/cdrtools
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.349 2015/02/18 15:33:08 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.350 2015/02/19 03:08:59 floppym Exp $
+
+  19 Feb 2015; Mike Gilbert <floppym@gentoo.org> cdrtools-3.01_alpha17.ebuild,
+  cdrtools-3.01_alpha24.ebuild, cdrtools-3.01_alpha27.ebuild:
+  Use 'caps' use flag to toggle linkage against libcap. Fixup automagic linkage
+  of libacl and libcap in 3.01_alpha27.
 
   18 Feb 2015; Rick Farina <zerochaos@gentoo.org> cdrtools-3.01_alpha17.ebuild,
   cdrtools-3.01_alpha24.ebuild, cdrtools-3.01_alpha27.ebuild:
